--- a/Eshop/Areas/Admin/Views/FAQ/AddFaq.cshtml
+++ b/Eshop/Areas/Admin/Views/FAQ/AddFaq.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Domain.ViewModels
-@model AddOrEditFaqViewModel
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model Domain.ViewModels.FAQ.AddOrEditFaqViewModel
 <form asp-area="admin" asp-controller="FAQ" asp-action="AddFaq">
  <div style="margin-top: 110px" class="col-lg-8 col-sm-6 col-xs-12">
             <div class="widget">
