--- a/Eshop/Areas/Admin/Views/FAQ/FAQs.cshtml
+++ b/Eshop/Areas/Admin/Views/FAQ/FAQs.cshtml
@@ -1,6 +1,5 @@
-﻿@using Domain.ViewModels
-@using Eshop.Common
-@model FilterFaqViewModel
+﻿@using Eshop.Common
+@model Domain.ViewModels.FAQ.FilterFaqViewModel
 
    <div style="margin: 20px" class="row ">
         <form id="indexForm">
