--- a/Eshop/Areas/Admin/Views/User/UserRoles.cshtml
+++ b/Eshop/Areas/Admin/Views/User/UserRoles.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tuple<List<Domain.Models.Role.UserRoles>,Domain.Models.User>
+﻿@model Tuple<List<Domain.Models.Role.UserRoles>, Domain.Models.UserAgg.User>
 
 <div style="margin-top: 110px" class="col-xs-12 col-md-12">
     <div class="well with-header  with-footer">
