--- a/Eshop/Views/Shared/_header.cshtml
+++ b/Eshop/Views/Shared/_header.cshtml
@@ -144,7 +144,7 @@
                                           @*  <div class="text-muted fs-7 fw-bold">۰۹xxxxxxxxx</div>*@
                                         </div>
                                     </div>
-                                    <div class="user-options">
+                                  @*  <div class="user-options">
                                         <ul>
                                             <li>
                                                 <span class="label">کیف پول</span>
@@ -168,7 +168,7 @@
                                                 </span>
                                             </li>
                                         </ul>
-                                    </div>
+                                    </div>*@
                                 </div>
                                 <ul class="nav nav-items-with-icon flex-column">
                                     <li class="nav-item">
