--- a/Eshop/Views/Product/Index.cshtml
+++ b/Eshop/Views/Product/Index.cshtml
@@ -273,7 +273,7 @@
                         </div>
                         <div class="product-seller--add-to-cart">
 
-                            <a href="/profile/BuyProduct/@Model.Id" class="btn btn-primary w-100" data-toast="" data-toast-type="success" data-toast-color="green" data-toast-position="topRight" data-toast-icon="ri-check-fill" data-toast-title="موفق!" data-toast-message="به سبد اضافه شد!">
+                            <a href="/profile/BuyProduct/@Model.Id" class="btn btn-primary w-100" data-toast="" data-toast-type="success" data-toast-color="green" data-toast-position="topRight" data-toast-icon="ri-check-fill" data-toast-title="موفق!" data-toast-message="به سبد اضافه شد!"></a>
 
                             <a href="/profile/BuyProduct/@Model.Id" class="btn btn-primary w-100" @*data-toast="" data-toast-type="success" data-toast-color="green" data-toast-position="topRight" data-toast-icon="ri-check-fill" data-toast-title="موفق!" data-toast-message="به سبد اضافه شد!"*@>
 
@@ -990,8 +990,9 @@
 
 @section Section
 {
-    
     <script>
+    
+
         function ShowEditDateModal(requestId) {
             $.ajax({
                 url: "/AddFavoriteProduct",
@@ -1016,10 +1017,10 @@
 
         $('#notificationSweetAlert').fadeOut(5000)
 
-	});
+	
 
-</script>
 
+    </script>
 
 
 }
