--- a/Eshop/Views/Shared/Components/Order/OrderViewComponent.cshtml
+++ b/Eshop/Views/Shared/Components/Order/OrderViewComponent.cshtml
@@ -56,7 +56,7 @@
                         @ViewBag.TotalPrice <span class="currency">تومان</span>
                     </span>
                 </div>
-                <a href="/profile/Orders/@Model.Id" class="btn btn-primary">ورود و ثبت سفارش</a>
+                <a href="/profile/Orders/@User.GetUserId()" class="btn btn-primary">ورود و ثبت سفارش</a>
             </div>
         </div>
     </div>
