--- a/Eshop/Views/Shared/_activeEmail.cshtml
+++ b/Eshop/Views/Shared/_activeEmail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Models.User
+﻿@model Domain.Models.UserAgg.User
 
 <div style="direction: rtl; padding: 20px">
     <h2>@Model.Email عزیز !</h2>
