Dynaimc Index Site And Layout Site

--- a/Eshop/Views/Shared/Components/Group/_GroupViewComponent.cshtml
+++ b/Eshop/Views/Shared/Components/Group/_GroupViewComponent.cshtml
@@ -29,20 +29,15 @@
         </div>
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" href="index-1.html">خانه</a>
+                <a class="nav-link" href="/">خانه</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">وبلاگ</a>
+                <a class="nav-link" href="/Faq">پرسش های متداول</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">پرسش های متداول</a>
+                <a class="nav-link" href="/ContactUs">تماس با ما</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">تماس با ما</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">درباره ما</a>
-            </li>
+           
         </ul>
     </div>
 </div>
