--- a/Eshop/Views/Home/Index.cshtml
+++ b/Eshop/Views/Home/Index.cshtml
@@ -112,49 +112,9 @@
     }
 </div>
 <!-- start of box => specials-product-slider -->
-<div class="ui-box ui-box-specials pb-3 mb-5" style="background-color: #f03426;">
-    <div class="container">
-        <div class="ui-box-title text-white fw-bolder d-sm-none">قبل از اتمام جشنواره خرید کن!</div>
-        <div class="ui-box-content">
-            <div class="row">
-                <div class="col-lg-3 d-lg-block d-none">
-                    <div class="specials-container">
-                        <img src="/site/theme-assets/images/theme/specials.png" class="img-fluid" alt="">
-                        <a href="#" class="btn btn-sm btn-outline-light">مشاهده همه <i class="ri-arrow-left-fill ms-2"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-9">
-                    <!-- Slider main container -->
-                    <div class="swiper product-specials-swiper-slider mb-3 pb-5 swiper-initialized swiper-horizontal swiper-pointer-events swiper-rtl">
-                        <!-- Additional required wrapper -->
-                        <div class="swiper-wrapper" id="swiper-wrapper-d1085f76ca31a8129" aria-live="polite" style="transform: translate3d(0px, 0px, 0px);">
-                            <!-- Slides -->
-                            <div class="swiper-slide d-lg-none d-sm-block d-none swiper-slide-active" role="group" aria-label="1 / 9" style="margin-left: 10px;">
-                                <div class="specials-container">
-                                    <img src="/site/theme-assets/images/theme/specials.png" class="img-fluid mb-0" alt="">
-                                    <a href="#" class="btn btn-sm btn-outline-light">مشاهده همه <i class="ri-arrow-left-fill ms-2"></i></a>
-                                </div>
-                            </div>
-                            @foreach (var item in products)
-                            {
-                                <partial name="_ProductCart" model="item" />
-                            }
-                        </div>
-                        <!-- If we need pagination -->
-                        <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal swiper-pagination-bullets-dynamic" style="width: 80px;"><span class="swiper-pagination-bullet swiper-pagination-bullet-active swiper-pagination-bullet-active-main" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true" style="right: 32px;"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active-next" tabindex="0" role="button" aria-label="Go to slide 2" style="right: 32px;"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active-next-next" tabindex="0" role="button" aria-label="Go to slide 3" style="right: 32px;"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4" style="right: 32px;"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5" style="right: 32px;"></span></div>
 
-                        <!-- If we need navigation buttons -->
-                        <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-be3e2a4e94ad7158" aria-disabled="false"></div>
-                        <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-be3e2a4e94ad7158" aria-disabled="false"></div>
-                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <!-- end of box => specials-product-slider -->
-<!-- start of box => categories-slider -->
+<!-- start of box => categories-slider -->@* 
 <div class="ui-box mb-5">
     <div class="ui-box-title">دسته بندی محصولات</div>
     <div class="ui-box-content">
@@ -162,7 +122,7 @@
             <!-- Slider main container -->
             <div class="swiper category-swiper-slider pb-5 swiper-initialized swiper-horizontal swiper-pointer-events swiper-rtl">
                 <!-- Additional required wrapper -->
-                <div class="swiper-wrapper" id="swiper-wrapper-106b1c6ac945bf43b" aria-live="polite" style="transform: translate3d(0px, 0px, 0px);">
+               <div class="swiper-wrapper" id="swiper-wrapper-106b1c6ac945bf43b" aria-live="polite" style="transform: translate3d(0px, 0px, 0px);">
                     <!-- Slides -->
                     <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 9" style="width: 162px; margin-left: 10px;">
                         <div class="category-item">
@@ -237,7 +197,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- If we need pagination -->
+              <!-- If we need pagination -->
                 <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal swiper-pagination-bullets-dynamic" style="width: 80px;"><span class="swiper-pagination-bullet swiper-pagination-bullet-active swiper-pagination-bullet-active-main" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true" style="right: 16px;"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active-next" tabindex="0" role="button" aria-label="Go to slide 2" style="right: 16px;"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active-next-next" tabindex="0" role="button" aria-label="Go to slide 3" style="right: 16px;"></span></div>
 
                 <!-- If we need navigation buttons -->
@@ -247,9 +207,9 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@  
 <!-- end of box => categories-slider -->
-<div class="row mb-5">
+@*<div class="row mb-5">*@
     @* @if(banners.Any(c=>c.Position==pos))
         <div class="col-md-3 col-6 mb-lg-0 mb-3">
             <!-- start of banner -->
@@ -287,10 +247,10 @@
             </div>
             <!-- end of banner -->
         </div>*@
-</div>
+@*</div>*@
 <!-- start of box -->
 <div class="ui-box mb-5">
-    <div class="ui-box-title">منتخب محصولات تخفیف و حراج</div>
+    <div class="ui-box-title">لیست محصولات</div>
     <div class="ui-box-content">
         <!-- Slider main container -->
         <div class="swiper product-swiper-slider swiper-initialized swiper-horizontal swiper-pointer-events swiper-rtl">
