--- a/Eshop/Views/Shared/_footer.cshtml
+++ b/Eshop/Views/Shared/_footer.cshtml
@@ -7,7 +7,7 @@
     <div class="container footer-logo-area">
         <div class="d-flex align-items-start">
             <div class="logo-container logo-box">
-                <a href="#" class="logo">
+                <a href="/" class="logo">
                     <img src="/site/theme-assets/images/logo.svg" width="120" alt="">
                     <span class="logo-text">بررسی،انتخاب و خرید آنلاین</span>
                 </a>
@@ -15,12 +15,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="d-flex align-items-center flex-wrap my-4">
-            <span class="text-secondary me-2">تلفن پشتیبانی:</span>
-            <a href="#" class="link border-bottom-0">۰۱۲۳۴۵۶۷ - ۰۲۱</a>
-            <span class="fs-7 text-muted mx-2">|</span>
-            <span>هفت روز هفته، ۲۴ ساعت شبانه روز پاسخگوی شما هستیم.</span>
-        </div>
+     
         <div class="services border-bottom py-4 mb-4">
             <div class="service-container">
                 <a href="#" class="service">
@@ -31,7 +26,7 @@
                 </a>
             </div>
             <div class="service-container">
-                <a href="#" class="service">
+                <a href="" class="service">
                     <span class="service-icon">
                         <img src="/site/theme-assets/images/services/02.svg" alt="">
                     </span>
@@ -39,7 +34,7 @@
                 </a>
             </div>
             <div class="service-container">
-                <a href="#" class="service">
+                <a href=" class="service">
                     <span class="service-icon">
                         <img src="/site/theme-assets/images/services/03.svg" alt="">
                     </span>
@@ -47,7 +42,7 @@
                 </a>
             </div>
             <div class="service-container">
-                <a href="#" class="service">
+                <a href="" class="service">
                     <span class="service-icon">
                         <img src="/site/theme-assets/images/services/04.svg" alt="">
                     </span>
@@ -55,7 +50,7 @@
                 </a>
             </div>
             <div class="service-container">
-                <a href="#" class="service">
+                <a href="" class="service">
                     <span class="service-icon">
                         <img src="/site/theme-assets/images/services/05.svg" alt="">
                     </span>
@@ -87,32 +82,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-12">
-                <div class="widget widget-footer">
-                    <div class="widget-title">راهنمای خرید از سایت</div>
-                    <div class="widget-content widget-list">
-                        <ul>
-                            <li><a href="#">نحوه ثبت سفارش</a></li>
-                            <li><a href="#">رویه ارسال سفارش</a></li>
-                            <li><a href="#">شیوه های پرداخت</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+         
             <div class="col-lg-4 col-md-5">
                 @await Component.InvokeAsync("SocialMediaVC")
-                <div class="widget widget-footer">
-                    <div class="widget-title">از جدیدترین تخفیف ها باخبر شوید</div>
-                    <div class="widget-content widget-newsletter">
-                        <form action="#">
-                            <div class="form-element-row with-btn">
-                                <input type="text" class="form-control"
-                                       placeholder="آدرس ایمیل خود را وارد کنید">
-                                <button class="btn btn-primary">ثبت</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+               
             </div>
         </div>
         <div class="row">
@@ -122,43 +95,20 @@
                         <div class="fs-6 fw-bold mb-2">
                             فروشگاه اینترنتی یکتاکالا بررسی، انتخاب و خرید آنلاین
                         </div>
-                        <div class="fs-7 text-secondary text-justify">
-                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان
-                            گرافیک
-                            است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای
-                            شرایط فعلی
-                            تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای
-                            زیادی
-                            در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با
-                            نرم
-                            افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو
-                            در زبان
-                            فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه
-                            راهکارها، و
-                            شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و
-                            جوابگوی سوالات
-                            پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-                        </div>
+
                     </div>
-                    <div class="expandable-text-expand-btn justify-content-start text-sm">
-                        <span class="show-more active">
-                            مشاهده بیشتر <i class="ri-arrow-down-s-line ms-2"></i>
-                        </span>
-                        <span class="show-less d-none">
-                            بستن <i class="ri-arrow-up-s-line ms-2"></i>
-                        </span>
-                    </div>
+                  
                 </div>
             </div>
             <div class="col-lg-4 mb-4">
                 <div class="trust-symbol">
-                    <a href="#">
+                    <a href="">
                         <img src="/site/theme-assets/images/symbol/01.png" alt="">
                     </a>
-                    <a href="#">
+                    <a href="">
                         <img src="/site/theme-assets/images/symbol/02.png" alt="">
                     </a>
-                    <a href="#">
+                    <a href="">
                         <img src="/site/theme-assets/images/symbol/03.png" alt="">
                     </a>
                 </div>
