Discount Admin And Dynamic Heart BTN

--- a/Eshop/Areas/Admin/Views/Product/AddProduct.cshtml
+++ b/Eshop/Areas/Admin/Views/Product/AddProduct.cshtml
@@ -73,7 +73,7 @@
                         </div>
                         <div class="container">
                             <div class="row form-control">
-                                <input type="number" asp-for="Price" placeholder="مبلغ اضافه شده به خاطر ویژگی" />
+                                <input type="number" asp-for="Prices" placeholder="مبلغ اضافه شده به خاطر ویژگی" />
                             </div>
                         </div>
                         <div class="row">
