--- a/Eshop/Views/Shared/_footer.cshtml
+++ b/Eshop/Views/Shared/_footer.cshtml
@@ -34,7 +34,7 @@
                 </a>
             </div>
             <div class="service-container">
-                <a href=" class="service">
+                <a href="" class="service">
                     <span class="service-icon">
                         <img src="/site/theme-assets/images/services/03.svg" alt="">
                     </span>
