--- a/Eshop/Views/Shared/_header.cshtml
+++ b/Eshop/Views/Shared/_header.cshtml
@@ -53,9 +53,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/ContactUss">تماس با ما</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">درباره ما</a>
-                    </li>
+                   
                     @await Component.InvokeAsync("HeaderLinks")
                 </ul>
             </div>
@@ -172,9 +170,9 @@
                         </div>
                     </div>
                     <div class="user-option">
-                        <a href="#" class="user-option-btn user-option-btn--account">
+                        <a href="/Profile/FavoriteProduct" class="user-option-btn user-option-btn--account">
                             <i class="ri-heart-3-fill icon"></i>
-                            <span class="counter">۲</span>
+                            <span class="counter"></span>
                         </a>
                     </div>
                     @await Component.InvokeAsync("Order",User.GetUserId())
