--- a/Eshop/Views/ErrorHandler/NotFound.cshtml
+++ b/Eshop/Views/ErrorHandler/NotFound.cshtml
@@ -1,46 +1,48 @@
 ﻿@{
     Layout = null;
 }
+@{
+    Layout = null;
+}
+
 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>404</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,600,700%7CSource+Sans+Pro:400,600,700' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/font-icons.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <link rel="shortcut icon" href="/img/favicon.png">
-    <link rel="apple-touch-icon" href="/img/apple-icon.png">
+	<title>404 HTML Template by Colorlib</title>
+
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:700,900" rel="stylesheet">
+
+<link href="/css/404style.css" rel="stylesheet" />
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
 </head>
 
-<body class="style-default style-rounded error404">
-    <main>
-        <div class="blog__content mb-72">
-            <div class="container text-center">
-                <h1 class="page-404-number">404</h1>
-                <h2>صفحه یافت نشد</h2>
-                <p>نگران نباشید.جستجو کنید...</p>
+<body>
 
-                <div class="row justify-content-center mt-40">
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>404</h1>
+				<h2>Page not found</h2>
+			</div>
+			<a href="/">Homepage</a>
+		</div>
+	</div>
 
-                    <div class="col-md-6">
-                        <!-- Search form -->
-                        <form role="search" action="/Search" method="get" class="search-form relative">
-                            <input type="search" class="widget-search-input mb-0" name="q" placeholder="جستجو مقاله">
-                            <button type="submit" class="widget-search-button btn btn-color"><i class="ui-search widget-search-icon"></i></button>
-                        </form>
-                    </div>
+</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
-                </div> <!-- end row -->
-
-            </div> <!-- end container -->
-        </div>
-
-    </main> <!-- end main-wrapper -->
-</body>
 </html>
