--- a/Eshop/Views/Shared/Components/GetVotes/GetVotes.cshtml
+++ b/Eshop/Views/Shared/Components/GetVotes/GetVotes.cshtml
@@ -3,7 +3,12 @@
 
     <div class="comment-footer">
 
-        <span class="glyphicon glyphicon-thumbs-up">@Model.Item1</span>
-        <button class="comment-dislike">@Model.Item2</button>
+        <span style="margin-right: 3px" class="glyphicon glyphicon-thumbs-up"><i class="fa-solid fa-thumbs-up"></i>@Model.Item1</span>
+       
+        <span  class="comment-dislike"><i style="margin-top: 5px" class="fa-solid fa-thumbs-down"></i>@Model.Item2</span>
     </div>
 </div>
+@section Section
+{
+    
+}
