--- a/Eshop/Views/Shared/_Style.cshtml
+++ b/Eshop/Views/Shared/_Style.cshtml
@@ -11,9 +11,10 @@
 <link rel="stylesheet" href="/css/kamadatepicker.scss">
 <link rel="stylesheet" href="/css/kamadatepicker.min.css">
 
-
+<script src="https://kit.fontawesome.com/63ffd96d44.js" crossorigin="anonymous"></script>
 <link href="/css/vendors.min.css" rel="stylesheet" />
 <link href="/css/components.css" rel="stylesheet" />
 <link href="/css/animate.css" rel="stylesheet" />
 <link href="/css/sweetalert2.min.css" rel="stylesheet" />
 <link href="/css/toastr.css" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
