--- a/Eshop/Views/Shared/_header.cshtml
+++ b/Eshop/Views/Shared/_header.cshtml
@@ -97,7 +97,7 @@
                             <i class="ri-close-line"></i>
                         </button>
                     </form>
-                    <div class="search-result-container">
+                    @*<div class="search-result-container">
                         <div class="search-result-tags-container">
                             <div class="search-result-tags-label">
                                 <i class="ri-fire-line"></i> بیشترین
@@ -119,7 +119,7 @@
                             <li><a href="#">قاب گوشی موبایل</a></li>
                             <li><a href="#">گوشی موبایل اپل</a></li>
                         </ul>
-                    </div>
+                    </div>*@
                 </div>
             </div>
             @if (User.Identity.IsAuthenticated)
