--- a/Eshop/Views/Shared/_Layout.cshtml
+++ b/Eshop/Views/Shared/_Layout.cshtml
@@ -185,10 +185,17 @@
 
 
     <partial name="_layoutJs" />
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     @RenderSection("Section",false)
    
+<script>
+        $(document).ready(function () {
+            $("#searche").autocomplete({
+                source: 'api/ProductApi/Search'
+            });
 
+        });
+    </script>
 
 </body>
 
