--- a/Eshop/Views/Home/Index.cshtml
+++ b/Eshop/Views/Home/Index.cshtml
@@ -302,7 +302,7 @@
                         {
                             <partial name="_ProductCart" model="item" />
                         }
-
+                        <a href="/"> نمایش همه </a>
 <div class="row mb-5">
     @if (banners != null && banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.BottomRight))
     {
