--- a/Eshop/Views/Home/onlinePayment.cshtml
+++ b/Eshop/Views/Home/onlinePayment.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="container">
-    @if (ViewBag.IsSuccess == true)
+    @if (ViewBag.IsSuccess!=null && ViewBag.IsSuccess == true)
     {
         <main class="page-content">
             <div class="container">
@@ -62,10 +62,7 @@
                                         <div class="fs-5 fw-bold text-danger mb-3">
                                             متاسفانه پرداخت شما ناموفق بود!
                                         </div>
-                                        <div class="d-flex align-items-center flex-wrap mb-3">
-                                            <div class="text-secondary me-3">شماره سفارش:</div>
-                                            <div class="font-en">DKC-244424454</div>
-                                        </div>
+                                      
                                         <div class="text-danger mb-3">
                                             برای جلوگیری از حذف خودکار سفارش، لطفا مبلغ سفارش پرداخت نمایید.
                                         </div>
