--- a/Eshop/Areas/Admin/Views/Shared/_slide.cshtml
+++ b/Eshop/Areas/Admin/Views/Shared/_slide.cshtml
@@ -2,11 +2,7 @@
 
 <div style="float: right" class="page-sidebar" id="sidebar">
     <!-- Page Sidebar Header-->
-    <div class="sidebar-header-wrapper">
-        <input type="text" class="searchinput" />
-        <i class="searchicon fa fa-search"></i>
-        <div class="searchhelper">به جستجوی صفحات، گزارشات، پیام ها و ایمیل خود بپردازید</div>
-    </div>
+    
     <!-- /Page Sidebar Header -->
     <!-- Sidebar Menu -->
     <ul class="nav sidebar-menu">
@@ -130,6 +126,56 @@
                 <li>
                     <a href="/Admin/AddBanner">
                         <span class="menu-text">افزودن بنر</span>
+                    </a>
+                </li>
+
+            </ul>
+           
+        </li>
+        <li>
+            <a href="#" class="menu-dropdown">
+                <i class="glyphicon glyphicon-picture"></i>
+                <span class="menu-text"> مدیریت صفحات </span>
+
+                <i class="menu-expand"></i>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="/Admin/Pages">
+                        <span class="menu-text">لیست  صفحات</span>
+                    </a>
+                </li>
+
+            </ul>
+            <ul class="submenu">
+                <li>
+                    <a href="/Admin/FAQs">
+                        <span class="menu-text">مدیریت پرس های متداول</span>
+                    </a>
+                </li>
+
+            </ul>
+           
+        </li>
+        <li>
+            <a href="#" class="menu-dropdown">
+                <i class="glyphicon glyphicon-picture"></i>
+                <span class="menu-text"> مدیریت لیتک ها </span>
+
+                <i class="menu-expand"></i>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="/Admin/Pages">
+                        <span class="menu-text">لیست  لیتک ها</span>
+                    </a>
+                </li>
+
+            </ul>
+            <ul class="submenu">
+                <li>
+                    <a href="/Admin/SocialMedia">
+                        <span class="menu-text">لیست صفحات مجازی</span>
                     </a>
                 </li>
 
