--- a/Eshop/Areas/Admin/Views/Shared/_header.cshtml
+++ b/Eshop/Areas/Admin/Views/Shared/_header.cshtml
@@ -2,7 +2,7 @@
     <ul class="breadcrumb">
         <li>
             <i class="fa fa-home"></i>
-            <a href="#">خانه</a>
+            <a href="/">خانه</a>
         </li>
         <li class="active">داشبورد</li>
     </ul>
@@ -20,7 +20,7 @@
         <a class="sidebar-toggler" href="#">
             <i class="fa fa-arrows-h"></i>
         </a>
-        <a class="refresh" id="refresh-toggler" href="">
+        <a class="refresh" id="refresh-toggler" href="#">
             <i class="glyphicon glyphicon-refresh"></i>
         </a>
         <a class="fullscreen" id="fullscreen-toggler" href="#">
