--- a/Eshop/Areas/Admin/Views/Shared/_sideBar.cshtml
+++ b/Eshop/Areas/Admin/Views/Shared/_sideBar.cshtml
@@ -1,9 +1,10 @@
-﻿<div class="navbar">
+﻿@using Application.Convertor
+<div class="navbar">
         <div class="navbar-inner">
             <div class="navbar-container">
                 <!-- Navbar Barnd -->
                 <div class="navbar-header pull-right">
-                    <a href="#" class="navbar-brand">
+                    <a href="/" class="navbar-brand">
                         <small>
                             <img src="/Admin/assets/img/logo-rtl.png" alt="" />
                         </small>
@@ -19,239 +20,12 @@
                 <div class="navbar-header pull-left">
                     <div class="navbar-account">
                         <ul class="account-area">
-                            <li>
-                                <a class=" dropdown-toggle" data-toggle="dropdown" title="Help" href="#">
-                                    <i class="icon fa fa-warning"></i>
-                                </a>
-                                <!--Notification Dropdown-->
-                                <ul class="pull-right dropdown-menu dropdown-arrow dropdown-notifications">
-                                    <li>
-                                        <a href="#">
-                                            <div class="clearfix">
-                                                <div class="notification-icon">
-                                                    <i class="fa fa-phone bg-themeprimary white"></i>
-                                                </div>
-                                                <div class="notification-body">
-                                                    <span class="title">ملاقات در اسکایپ با علی</span>
-                                                    <span class="description">01:00 بعد از ظهر</span>
-                                                </div>
-                                                <div class="notification-extra">
-                                                    <i class="fa fa-clock-o themeprimary"></i>
-                                                    <span class="description">دفتر</span>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="clearfix">
-                                                <div class="notification-icon">
-                                                    <i class="fa fa-check bg-darkorange white"></i>
-                                                </div>
-                                                <div class="notification-body">
-                                                    <span class="title">استراحت پیش بینی نشده</span>
-                                                    <span class="description">03:30 pm - 05:15 pm</span>
-                                                </div>
-                                                <div class="notification-extra">
-                                                    <i class="fa fa-clock-o darkorange"></i>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="clearfix">
-                                                <div class="notification-icon">
-                                                    <i class="fa fa-gift bg-warning white"></i>
-                                                </div>
-                                                <div class="notification-body">
-                                                    <span class="title">تولد مهرام</span>
-                                                    <span class="description">08:30 pm</span>
-                                                </div>
-                                                <div class="notification-extra">
-                                                    <i class="fa fa-calendar warning"></i>
-                                                    <i class="fa fa-clock-o warning"></i>
-                                                    <span class="description">خانه</span>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="clearfix">
-                                                <div class="notification-icon">
-                                                    <i class="fa fa-glass bg-success white"></i>
-                                                </div>
-                                                <div class="notification-body">
-                                                    <span class="title">شام با دوستان</span>
-                                                    <span class="description">10:30 pm</span>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li class="dropdown-footer ">
-                                        <span>
-                                            امروز، 14 تیر
-                                        </span>
-                                        <span class="pull-left">
-                                            10°c
-                                            <i class="wi wi-cloudy"></i>
-                                        </span>
-                                    </li>
-                                </ul>
-                                <!--/Notification Dropdown-->
-                            </li>
-                            <li>
-                                <a class="dropdown-toggle" data-toggle="dropdown" title="Mails" href="#">
-                                    <i class="icon fa fa-envelope"></i>
-                                    <span class="badge">3</span>
-                                </a>
-                                <!--Messages Dropdown-->
-                                <ul class="pull-right dropdown-menu dropdown-arrow dropdown-messages">
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/img/avatars/divyia.jpg" class="message-avatar" alt="Divyia Austin">
-                                            <div class="message">
-                                                <span class="message-sender">
-                                                    دیویا فیلیپس
-                                                </span>
-                                                <span class="message-time">
-                                                    2 دقیقه پیش
-                                                </span>
-                                                <span class="message-subject">
-                                                    دستور پخت پای سیب ارسال می گردد
-                                                </span>
-                                                <span class="message-body">
-                                                    برای پختن پای سیب تنها لازم است تا سیب داشته باشید
-                                                </span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/img/avatars/bing.png" class="message-avatar" alt="Microsoft Bing">
-                                            <div class="message">
-                                                <span class="message-sender">
-                                                    Bing.com
-                                                </span>
-                                                <span class="message-time">
-                                                    دیروز
-                                                </span>
-                                                <span class="message-subject">
-                                                    Bing Newsletter: The January Issue‏
-                                                </span>
-                                                <span class="message-body">
-                                                    Discover new music just in time for the Grammy® Awards.
-                                                </span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="assets/img/avatars/adam-jansen.jpg" class="message-avatar" alt="Divyia Austin">
-                                            <div class="message">
-                                                <span class="message-sender">
-                                                    Nicolas
-                                                </span>
-                                                <span class="message-time">
-                                                    Friday, September 22
-                                                </span>
-                                                <span class="message-subject">
-                                                    دوربین های 4کی جدید
-                                                </span>
-                                                <span class="message-body">
-                                                    انقلاب دوربین های 4کی به مرحله جدیدی رسیده است.
-                                                </span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                </ul>
-                                <!--/Messages Dropdown-->
-                            </li>
-
-                            <li>
-                                <a class="dropdown-toggle" data-toggle="dropdown" title="Tasks" href="#">
-                                    <i class="icon fa fa-tasks"></i>
-                                    <span class="badge">4</span>
-                                </a>
-                                <!--Tasks Dropdown-->
-                                <ul class="pull-right dropdown-menu dropdown-tasks dropdown-arrow ">
-                                    <li class="dropdown-header bordered-darkorange">
-                                        <i class="fa fa-tasks"></i>
-                                        4 وظیفه در حال انجام
-                                    </li>
-
-                                    <li>
-                                        <a href="#">
-                                            <div class="clearfix">
-                                                <span class="pull-right">ایجاد حساب</span>
-                                                <span class="pull-left">65%</span>
-                                            </div>
-
-                                            <div class="progress progress-xs">
-                                                <div style="width:65%" class="progress-bar"></div>
-                                            </div>
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#">
-                                            <div class="clearfix">
-                                                <span class="pull-right">تکمیل پروفایل</span>
-                                                <span class="pull-left">35%</span>
-                                            </div>
-
-                                            <div class="progress progress-xs">
-                                                <div style="width:35%" class="progress-bar progress-bar-success"></div>
-                                            </div>
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#">
-                                            <div class="clearfix">
-                                                <span class="pull-right">تکمیل رزومه</span>
-                                                <span class="pull-left">75%</span>
-                                            </div>
-
-                                            <div class="progress progress-xs">
-                                                <div style="width:75%" class="progress-bar progress-bar-darkorange"></div>
-                                            </div>
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#">
-                                            <div class="clearfix">
-                                                <span class="pull-left">افزودن دوستان</span>
-                                                <span class="pull-right">10%</span>
-                                            </div>
-
-                                            <div class="progress progress-xs">
-                                                <div style="width:10%" class="progress-bar progress-bar-warning"></div>
-                                            </div>
-                                        </a>
-                                    </li>
-
-                                    <li class="dropdown-footer">
-                                        <a href="#">
-                                            مشاهده همه وظایف
-                                        </a>
-                                        <button class="btn btn-xs btn-default shiny darkorange icon-only pull-left"><i class="fa fa-check"></i></button>
-                                    </li>
-                                </ul>
-                                <!--/Tasks Dropdown-->
-                            </li>
-                            <li>
-                                <a class="wave in" id="chat-link" title="Chat" href="#">
-                                    <i class="icon glyphicon glyphicon-comment"></i>
-                                </a>
-                            </li>
+                            
                             <li>
                                 <a class="login-area dropdown-toggle" data-toggle="dropdown">
-                                    <div class="avatar" title="View your public profile">
-                                        <img src="assets/img/avatars/adam-jansen.jpg">
-                                    </div>
+                                 @*   <div class="avatar" title="View your public profile">
+                                        <img src="site/theme-assets/images/avatar/female.png">
+                                    </div>*@
                                     <section>
                                         <h2><span class="profile"><span>@User.Identity.Name </span></span></h2>
                                     </section>
@@ -259,18 +33,13 @@
                                 <!--Login Area Dropdown-->
                                 <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
                                     <li class="username"><a>@User.Identity.Name </a></li>
-                                    <li class="email"><a>David.Stevenson@live.com</a></li>
+                                    <li class="email"><a>@User.Identity.Name</a></li>
                                     <!--Avatar Area-->
-                                    <li>
-                                        <div class="avatar-area">
-                                            <img src="/images/banners/93a9a618788545b5a37d033e675038ac.jpg" class="avatar">
-                                            <span class="caption">تغییر تصویر</span>
-                                        </div>
-                                    </li>
+                                 
                                     <!--Avatar Area-->
                                     <li class="edit">
-                                        <a href="profile.html" class="pull-left">پروفایل</a>
-                                        <a href="#" class="pull-right">تنظیمات</a>
+                                        <a href="/Profile" class="pull-left">پروفایل</a>
+                                        <a href="/Profile/UserDetail" class="pull-right">تنظیمات</a>
                                     </li>
                                     <!--Theme Selector Area-->
                                     <li class="theme-area">
@@ -291,7 +60,7 @@
                                     </li>
                                     <!--/Theme Selector Area-->
                                     <li class="dropdown-footer">
-                                        <a href="login.html">
+                                        <a href="/logout">
                                             خروج از سیستم
                                         </a>
                                     </li>
@@ -302,7 +71,8 @@
                             <!--Note: notice that setting div must start right after account area list.
                             no space must be between these elements-->
                             <!-- Settings -->
-                        </ul><div class="setting">
+                        </ul>
+                    @*<div class="setting">
                             <a id="btn-setting" title="Setting" href="#">
                                 <i class="icon glyphicon glyphicon-cog"></i>
                             </a>
@@ -322,12 +92,13 @@
                             <label>
                                 <input type="checkbox" id="checkbox_fixedheader">
                                 <span class="text">نوار میانی ثابت</span>
-                            </label>
-                        </div>
-                        <!-- Settings -->
-                    </div>
+                            </label>*@
+                        @*</div>*@
+                    @*    <!-- Settings -->
+                    </div>*@
                 </div>
                 <!-- /Account Area and Settings -->
             </div>
         </div>
     </div>
+</div>
