--- a/Eshop/Views/Shared/Components/Order/OrderViewComponent.cshtml
+++ b/Eshop/Views/Shared/Components/Order/OrderViewComponent.cshtml
@@ -4,7 +4,7 @@
 @if (Model != null)
 {
     <div class="user-option user-option--cart">
-        <a href="cart.html" class="user-option-btn user-option-btn--cart">
+        <a href="/profile/Orders/@User.GetUserId()" class="user-option-btn user-option-btn--cart">
             <i class="ri-shopping-bag-2-fill icon"></i>
             <span class="user-item-text">
                 <span class="title">سبد خرید شما</span>
