--- a/Eshop/Views/ErrorHandler/ServerError.cshtml
+++ b/Eshop/Views/ErrorHandler/ServerError.cshtml
@@ -1,46 +1,151 @@
 ﻿@{
     Layout = null;
 }
+<style>
+    @@import url("https://fonts.googleapis.com/css?family=Righteous");
 
-<!DOCTYPE html>
-<html lang="en">
+    body {
+        background-color: #000;
+        color: red;
+    }
+    .Wrapper {
+        width: 540px;
+        height: 200px;
+        display: none;
+        margin: 4% auto 0;
+        max-width: 100%;
+        max-height: 100%;
+        position: relative;
+        overflow: hidden;
+    }
 
-<head>
-    <title>500</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,600,700%7CSource+Sans+Pro:400,600,700' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/font-icons.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    #five {
+        z-index: 10;
+        position: absolute;
+    }
 
-    <link rel="shortcut icon" href="/img/favicon.png">
-    <link rel="apple-touch-icon" href="/img/apple-icon.png">
-</head>
+    .left {
+        z-index: 1;
+        width: 550px;
+        height: 200px;
+        position: absolute;
+        overflow: hidden;
+    }
 
-<body class="style-default style-rounded error404">
-<main>
-    <div class="blog__content mb-72">
-        <div class="container text-center">
-            <h1 class="page-404-number">500</h1>
-            <h2>صفحه یافت نشد</h2>
-            <p>نگران نباشید.جستجو کنید...</p>
+    .right {
+        z-index: 1;
+        width: 550px;
+        height: 200px;
+        position: absolute;
+        overflow: hidden;
+        left: 80%;
+    }
 
-            <div class="row justify-content-center mt-40">
+    h1 {
+        color: #000;
+        background: red;
+        padding: 10px;
+        border-radius: 50px;
+        width: 150px;
+        margin: 30px auto 10px;
+        text-align: center;
+        font-size: 1em;
+        font-family: "Righteous", sans-serif;
+        display: none;
+    }
 
-                <div class="col-md-6">
-                    <!-- Search form -->
-                    <form role="search" action="/Search" method="get" class="search-form relative">
-                        <input type="search" class="widget-search-input mb-0" name="q" placeholder="جستجو مقاله">
-                        <button type="submit" class="widget-search-button btn btn-color"><i class="ui-search widget-search-icon"></i></button>
-                    </form>
-                </div>
+    p {
+        width: 350px;
+        margin: 0px auto;
+        text-align: center;
+        font-family: "Righteous", sans-serif;
+        display: none;
+    }
 
-            </div> <!-- end row -->
+</style>
 
-        </div> <!-- end container -->
-    </div>
+<div class="Wrapper">
+    <div class="left">Error</div>
+    <div class="right">Error</div>
+    <canvas id="five" width="550" height="205"></canvas>
+</div>
+<h1>Error :(</h1>
+<p>خطا از سمت سرور است لحظاتی بعد مجدد تلاش کنید </p>
 
-</main> <!-- end main-wrapper -->
-</body>
-</html>
+
+
+<script>
+// experiments http://bit.ly/2QCjk6a
+
+WebFontConfig = {
+  google: { families: ["Righteous"] },
+  active: function () {
+    FiveOhFiveFont();
+  }
+};
+(function () {
+  var wf = document.createElement("script");
+  wf.src = "https://ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js";
+  wf.async = "true";
+  document.head.appendChild(wf);
+})();
+
+var FiveOhFive = document.getElementById("five");
+var FiveOhFiveContext = FiveOhFive.getContext("2d");
+FiveOhFiveFont(FiveOhFiveContext, FiveOhFive);
+FiveOhFiveContext.globalCompositeOperation = "destination-out";
+
+function FiveOhFiveFont(ctx, canvas) {
+  FiveOhFiveContext.fillText("500", 275, 100);
+  var grad = ctx.createLinearGradient(0, 0, canvas.width, canvas.height);
+  grad.addColorStop(0, "#000");
+  ctx.rect(0, 0, canvas.width, canvas.height);
+  ctx.fillStyle = grad;
+  ctx.fill();
+  ctx.fillStyle = "red";
+  ctx.font = "15em Righteous";
+  ctx.textAlign = "center";
+  ctx.textBaseline = "middle";
+}
+
+var WrapperW = $(".Wrapper").width();
+var WrapperH = $(".Wrapper").height();
+
+$(".left").click(function () {
+  for (var j = 1; j <= 500; j++) {
+    var X = (Math.random() * WrapperW) % (WrapperW >> 0);
+    var Y = (Math.random() * WrapperH) % (WrapperH >> 0);
+    var nTop = Math.floor(Math.random() * WrapperW);
+    var nLeft = Math.floor(Math.random() * WrapperH);
+    var $child = $(this).clone();
+
+    $(".Wrapper").append($child);
+    $child
+      .css({ top: X, left: -200 + Y })
+      .animate({ top: nTop + "px", left: 50 + nLeft + "px" }, 8000);
+  }
+});
+
+$(".right").click(function () {
+  for (var j = 1; j <= 500; j++) {
+    var X = (Math.random() * WrapperW) % (WrapperW >> 0);
+    var Y = (Math.random() * WrapperH) % (WrapperH >> 0);
+    var nTop = Math.floor(Math.random() * WrapperW);
+    var nLeft = Math.floor(Math.random() * WrapperH);
+    var $child = $(this).clone();
+
+    $(".Wrapper").append($child);
+    $child
+      .css({ top: X, left: 500 + Y })
+      .animate({ top: nTop + "px", left: 270 + nLeft + "px" }, 8000);
+  }
+});
+
+$("document").ready(function () {
+  $(".Wrapper,h1,p").fadeIn(100);
+  setTimeout(function () {
+    $(".right, .left").trigger("click");
+  }, 0);
+});
+
+</script>
