--- a/Eshop/Views/Product/Index.cshtml
+++ b/Eshop/Views/Product/Index.cshtml
@@ -15,11 +15,11 @@
         <!-- start of breadcrumb -->
         <nav class="mb-5" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">خانه</a></li>
-                <li class="breadcrumb-item"><a href="#">     @Html.Raw(Model.Category)</a></li>
+                <li class="breadcrumb-item"><a href="/">خانه</a></li>
+                <li class="breadcrumb-item"><a >     @Html.Raw(Model.Category)</a></li>
                 @foreach (var subCategory in Model.SubCategories)
                 {
-                    <li class="breadcrumb-item"><a href="#">@subCategory</a></li>
+                    <li class="breadcrumb-item"><a >@subCategory</a></li>
                 }
             </ol>
         </nav>
@@ -49,9 +49,9 @@
                                     <li><a href="/AddVote/@Model.Id?vote=true"><i class="fa-solid fa-thumbs-up"></i></a></li>
 
                                     <li><a href="/AddVote/@Model.Id?vote=false"><i class="fa-solid fa-thumbs-down"></i></a></li>
-                                    <li><a href="#"><i class="ri-line-chart-fill"></i></a></li>
+                                  @*  <li><a href="#"><i class="ri-line-chart-fill"></i></a></li>
                                     <li><a href="#"><i class="ri-scales-3-fill"></i></a></li>
-                                    <li><a href="#"><i class="ri-play-list-add-fill"></i></a></li>
+                                    <li><a href="#"><i class="ri-play-list-add-fill"></i></a></li>*@
                                 </ul>
                             </div>
                             <div class="gallery-img-container">
@@ -75,29 +75,27 @@
                 </div>
                 <div class="col-xl-5 col-lg-4 col-md-7 mb-lg-0 mb-4">
                     <!-- start of breadcrumb -->
-                    <nav class="mb-2" aria-label="breadcrumb">
+                    @*<nav class="mb-2" aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="#">اپل</a></li>
                             <li class="breadcrumb-item"><a href="#">گوشی موبایل اپل</a></li>
                         </ol>
-                    </nav>
+                    </nav>*@
                     <!-- end of breadcrumb -->
                     <!-- start of product-detail -->
                     <h2 class="product-title">
                         @Model.Title
                     </h2>
-                    <div class="product-en mb-3">
-                        <span>Apple iPhone 13 A2634 Dual SIM 128GB And 4GB RAM Mobile Phone</span>
-                    </div>
-                    <div class="product-user-suggestion mb-2">
+                    
+                  @*  <div class="product-user-suggestion mb-2">
                         <i class="ri-thumb-up-fill text-success me-1"></i>
                         <span class="fs-7 me-2">
                             ۷۹٪ (۱۷۰ نفر) از خریداران، این کالا را پیشنهاد کرده
                             اند.
                         </span>
                         <span data-bs-toggle="tooltip" data-bs-placement="bottom" title="" data-bs-original-title="خریداران کالا با انتخاب یکی از گزینه‌های پیشنهاد یا عدم پیشنهاد، تجربه خرید خود را با کاربران به اشتراک می‌گذارند." aria-label="خریداران کالا با انتخاب یکی از گزینه‌های پیشنهاد یا عدم پیشنهاد، تجربه خرید خود را با کاربران به اشتراک می‌گذارند."><i class="ri-information-line"></i></span>
-                    </div>
-                    <div class="product-user-meta fa-num mb-4">
+                    </div>*@
+                  @*  <div class="product-user-meta fa-num mb-4">
                         <span class="product-users-rating">
                             <i class="ri-star-fill icon me-1"></i>
                             <span class="fw-bold me-1">4.4</span>
@@ -139,7 +137,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                     <div class="expandable-text mb-3" style="height: 95px;">
                         <div class="expandable-text_text">
                             <div class="product-params">
@@ -166,7 +164,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="product-additional-info-container mb-3">
+                 @*   <div class="product-additional-info-container mb-3">
                         <span class="icon">
                             <i class="ri-information-line"></i>
                         </span>
@@ -183,7 +181,7 @@
                                 مورد قبول است که پلمپ کالا باز نشده باشد.
                             </p>
                         </div>
-                    </div>
+                    </div>*@
                     <div class="widget p-0">
                         <div class="widget-content widget--free-shipping">
                             <div class="free-shipping--detail">
@@ -206,18 +204,14 @@
                         <div class="seller-info-changeable">
                             <div class="product-seller-counter">
                                 <span class="label">فروشنده</span>
-                                <a href="#" class="anchor-link link border-bottom-0 fs-7 fa-num">
-                                    4
-                                    فروشنده
-                                    دیگر
-                                </a>
+                              
                             </div>
                             <div class="product-seller-row">
                                 <div class="product-seller-row-icon">
                                     <!-- <i class="ri-store-3-fill"></i> -->
                                     <img src="/site/theme-assets/images/seller-logo-small.svg" alt="">
                                 </div>
-                                <div class="product-seller-row-detail">
+                               @* <div class="product-seller-row-detail">
                                     <div class="product-seller-name mb-1">یکتاکالا</div>
                                     <div class="seller-final-score-container">
                                         <div class="seller-rate-container">
@@ -229,7 +223,7 @@
                                         </div>
                                     </div>
                                     <a href="#" class="seller-info-link"></a>
-                                </div>
+                                </div>*@
                             </div>
                             <div class="product-seller-row">
                                 <div class="product-seller-row-icon">
@@ -248,7 +242,7 @@
                                     <div class="product-seller-row-detail-subtitle"><i></i> آماده ارسال</div>
                                 </div>
                             </div>
-                            <div class="product-seller-row">
+                            @*<div class="product-seller-row">
                                 <div class="product-seller-row-icon">
                                     <i class="ri-copper-coin-fill text-warning"></i>
                                 </div>
@@ -258,29 +252,29 @@
                                         در باشگاه مشتریان
                                     </div>
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="product-seller-row product-seller-row--price">
                                 <div class="product-seller-row--price-now fa-num">
                                     <span class="price">@Model.Price.ToString("00")</span>
                                     <span class="currency">تومان</span>
                                 </div>
                             </div>
-                            <div class="product-seller-row product-remaining-in-stock">
+                            @*<div class="product-seller-row product-remaining-in-stock">
                                 <span>
                                     تنها <span class="mx-2">۱</span> عدد در انبار باقیست - پیش از
                                     اتمام بخرید
                                 </span>
-                            </div>
+                            </div>*@
                         </div>
                         <div class="product-seller--add-to-cart">
 
-                            <a href="/profile/BuyProduct/@Model.Id" class="btn btn-primary w-100" data-toast="" data-toast-type="success" data-toast-color="green" data-toast-position="topRight" data-toast-icon="ri-check-fill" data-toast-title="موفق!" data-toast-message="به سبد اضافه شد!"></a>
+                           
 
                             <a href="/profile/BuyProduct/@Model.Id" class="btn btn-primary w-100" @*data-toast="" data-toast-type="success" data-toast-color="green" data-toast-position="topRight" data-toast-icon="ri-check-fill" data-toast-title="موفق!" data-toast-message="به سبد اضافه شد!"*@>
 
                                 افزودن به سبد خرید
                             </a>
-                            </a>
+                            
                         </div>
                     </div>
                     <!-- end of product-seller-info -->
@@ -290,7 +284,7 @@
         <!-- end of product-detail-container -->
         <!-- start of box -->
         <div class="ui-box bg-white mb-5">
-            <div class="ui-box-title">لیست فروشندگان این کالا</div>
+            <div class="ui-box-title">لیست تنوع این کالا</div>
             <div class="ui-box-content">
                 <!-- start of suppliers-items -->
                 <div class="suppliers-items">
@@ -485,18 +479,16 @@
                             <li class="nav-item">
                                 <a class="nav-link active" href="#scrollspyHeading1" data-scroll="scrollspyHeading1">نقد و بررسی</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#scrollspyHeading2" data-scroll="scrollspyHeading2">بررسی تخصصی</a>
-                            </li>
+                          
                             <li class="nav-item">
                                 <a class="nav-link" href="#scrollspyHeading3" data-scroll="scrollspyHeading3">مشخصات</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#scrollspyHeading4" data-scroll="scrollspyHeading4">دیدگاه کاربران</a>
                             </li>
-                            <li class="nav-item">
+                           @* <li class="nav-item">
                                 <a class="nav-link" href="#scrollspyHeading5" data-scroll="scrollspyHeading5">پرسش و پاسخ</a>
-                            </li>
+                            </li>*@
                         </ul>
                     </div>
                     <!-- end of product-tabs -->
@@ -528,10 +520,10 @@
                 <!-- end of product-content-expert-articles -->
                 <!-- start of product-params -->
                 <div class="product-tab-content product-params tab-content border-bottom pb-2 mb-4" id="scrollspyHeading3">
-                    <div class="product-tab-title">
+                   @* <div class="product-tab-title">
                         <h2>مشخصات کالا</h2>
                         <h3 class="subtitle">Apple iPhone 13 A2634 Dual SIM 128GB And 4GB RAM Mobile Phone</h3>
-                    </div>
+                    </div>*@
                     <div class="expandable-text pt-1" style="height: 540px;">
                         <div class="expandable-text_text fa-num">
                             <!-- start of params-list -->
@@ -563,28 +555,22 @@
                     </div>
                 </div>
 
-                <div style="border: 3px solid red;" id="simplewizardinwidget-steps">
-                    @foreach (var item in await _ProductService.GetTagsForUser(Model.Id))
-                    {
-                        <div>@item.TagName</div>
-
-                    }
-                </div>
+               
 
 
                 <!-- end of product-params -->
                 <!-- start of product-comments -->
                 <div class="product-tab-content product-comments tab-content border-bottom pb-2 mb-4" id="scrollspyHeading4">
                     <div class="product-tab-title mb-0">
-                        <h2>امتیاز و دیدگاه کاربران</h2>
-                        <h3 class="subtitle">Samsung Galaxy M31 SM-M315F/DSN Dual SIM 128GB Mobile Phone</h3>
+                        <h2>  دیدگاه کاربران</h2>
+                        <h3 class="subtitle">@Model.Title</h3>
                     </div>
                     <div class="row">
                         <div class="col-xl-3 col-lg-4 col-md-5 mb-3">
                             <div class="ui-sticky ui-sticky-top pt-5 z-index-0">
                                 <!-- start of comments-sidebar -->
                                 <div class="comments-sidebar">
-                                    <div class="comments-sidebar-rating">
+                                 @*   <div class="comments-sidebar-rating">
                                         <div class="comments-sidebar-rating-main me-2">۴.۱</div>
                                         <div class="comments-sidebar-rating-desc">از ۵</div>
                                     </div>
@@ -595,8 +581,8 @@
                                                 <div class="stars-val" style="width: 70%;"></div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="content-expert-rating mt-4">
+                                    </div>*@
+                                    @*<div class="content-expert-rating mt-4">
                                         <div class="mb-3">
                                             <div class="content-expert-rating-title">کیفیت ساخت</div>
                                             <div class="content-expert-rating-value-wrapper">
@@ -647,7 +633,7 @@
                                                 <div class="content-expert-rating-value-label">۴.۱</div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>*@
                                     <div class="mb-2">دیدگاه خود را درباره این کالا بیان کنید</div>
                                     <a href="/AddComment/@Model.Id" class="btn btn-block btn-outline-primary">
                                         افزودن
@@ -659,7 +645,7 @@
                         </div>
                         <div class="col-xl-9 col-lg-8 col-md-7 pt-5">
                             <!-- start of filter-comments -->
-                            <div class="filter-comments mb-4">
+                           @* <div class="filter-comments mb-4">
                                 <div class="filter-comments-title me-2">
                                     <i class="ri-list-settings-fill me-1"></i>
                                     <span>مرتب سازی دیدگاه ها بر اساس:</span>
@@ -669,7 +655,7 @@
                                     <button class="filter-comments-option">مفیدترین دیدگاه ها</button>
                                     <button class="filter-comments-option">دیدگاه خریداران</button>
                                 </div>
-                            </div>
+                            </div>*@
                             <!-- end of filter-comments -->
                             <!-- start of comments -->
                             @await Component.InvokeAsync("ShowComment",Model.Id)
