--- a/Eshop/Views/Shared/Components/ShowComment/_ShowComment.cshtml
+++ b/Eshop/Views/Shared/Components/ShowComment/_ShowComment.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Application.Interface
+@using Application.StaticTools
 @model Tuple<List<Domain.Models.Product.ProductComment>,Tuple<int ,int>>
 @inject IUserService _UserService
 @{
@@ -19,7 +20,7 @@
             <!-- start of comment -->
             <div class="comment">
                 <div class="comment-header">
-                    <span>@item.CreatDate</span>
+                    <span>@item.CreatDate.ToFarsi()</span>
                     <span>@user.FirstName @user.LastName</span>
                     <a asp-action="AddComment" asp-route-id="@item.ProductId" asp-route-parentId="@item.Id" class="btn btn-info shiny btn-sm ">پاسخ</a>
                 </div>
@@ -38,7 +39,7 @@
                         <div style="margin-right: 35px; padding: 10px 30px;" class=" ui-box col-md-4">
                             <div class="comment-header">
                                 <span>@reply.User.FirstName @reply.User.LastName</span>
-                                <span>@reply.CreatDate</span>
+                                <span>@reply.CreatDate.ToFarsi()</span>
                             </div>
                             @reply.Comment
                         </div>
@@ -48,8 +49,8 @@
                 }
                 <div class="comment-footer">
                     <span class="me-2">آیا این دیدگاه برایتان مفید بود؟</span>
-                    <a href="/AddCommentVote/@item.Id?vote=true" class="comment-like">@Model.Item2.Item1</a>
-                    <a href="/AddCommentVote/@item.Id?vote=false" class="comment-dislike">@Model.Item2.Item2</a>
+                    <a href="/AddCommentVote/@item.Id?vote=true" class="comment-like"><span>@Model.Item2.Item1</span></a>
+                    <a href="/AddCommentVote/@item.Id?vote=false" class="comment-dislike"><span>@Model.Item2.Item2</span></a>
                 </div>
             </div>
             <!-- end of comment -->
