Header And Footer Changes

--- a/Eshop/Views/Shared/_footer.cshtml
+++ b/Eshop/Views/Shared/_footer.cshtml
@@ -115,9 +115,7 @@
             </div>
         </div>
         <div class="copy-right text-center text-muted py-3">
-            استفاده از مطالب فروشگاه اینترنتی یکتاکالا فقط برای مقاصد غیرتجاری و با ذکر منبع بلامانع است. کلیه
-            حقوق این
-            سایت متعلق به echo_designer می‌باشد.
+            این فروشگاه اینترنتی صرفا به منظور نمونه کار است و هیچگونه فعالیتی ندارد
         </div>
     </div>
 </footer>
