--- a/Eshop/Views/Shared/_header.cshtml
+++ b/Eshop/Views/Shared/_header.cshtml
@@ -39,21 +39,28 @@
                                     <div class="notification-item--text">خوش آمدید 👋</div>
                                 </div>
                             </div>
-
+                            <div class="swiper-slide">
+                                <div class="notification-item">
+                                    <div class="notification-item--text">
+                                        این فروشگاه اینترنتی صرفا به منظور نمونه کار است
+                                    </div>
+                                </div>
+                            </div>
+                           
                         </div>
                     </div>
                 </div>
             </div>
             <div class="page-header--top-left">
                 <ul class="nav nav-light justify-content-end">
-                
+
                     <li class="nav-item">
                         <a class="nav-link" href="/faq">پرسش های متداول</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/ContactUss">تماس با ما</a>
                     </li>
-                   
+
                     @await Component.InvokeAsync("HeaderLinks")
                 </ul>
             </div>
@@ -82,17 +89,17 @@
                         </button>
                     </form>
                     @*<div class="search-result-container">
-                        <div class="search-result-tags-container">
-                            <div class="search-result-tags-label">
-                                <i class="ri-fire-line"></i> بیشترین
-                                جستجوهای اخیر
-                            </div>
-                            <ul class="search-result-tags">
-                            </ul>
-                        </div>
-                        <div class="border-bottom my-3"></div>
-                        <ul class="search-result-items">
-                        </ul>
+                    <div class="search-result-tags-container">
+                    <div class="search-result-tags-label">
+                    <i class="ri-fire-line"></i> بیشترین
+                    جستجوهای اخیر
+                    </div>
+                    <ul class="search-result-tags">
+                    </ul>
+                    </div>
+                    <div class="border-bottom my-3"></div>
+                    <ul class="search-result-items">
+                    </ul>
                     </div>*@
                 </div>
             </div>
@@ -172,7 +179,7 @@
                     <div class="user-option">
                         <a href="/Profile/FavoriteProduct" class="user-option-btn user-option-btn--account">
                             <i class="ri-heart-3-fill icon"></i>
-                            
+
                         </a>
                     </div>
                     @await Component.InvokeAsync("Order",User.GetUserId())
